--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="no.ntnu.stud.larsjny.mobile_lab4.MainActivity"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-
-    <ListView
-        android:id="@+id/lv_messages"
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/vp_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:footerDividersEnabled="false"
-        android:foregroundGravity="top"
-        android:headerDividersEnabled="false"
-        app:layout_constraintBottom_toTopOf="@id/et_new_message"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/et_new_message"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="text|textMultiLine"
-        android:lines="3"
-        android:text="New Message"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/b_send_new_message" />
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pts_title-strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:foregroundGravity="top"
+            android:background="@color/colorPrimaryDark"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp"
+            android:textAlignment="center"
+            />
 
-    <Button
-        android:id="@+id/b_send_new_message"
-        style="@android:style/Widget.Material.Light.Button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/et_new_message" />
+    </android.support.v4.view.ViewPager>
+
 </android.support.constraint.ConstraintLayout>
+
+
+
