Users and messages are displayed and updated in realtime

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorTabText">#e4e4e4</color>
     <color name="invalidUsername">#2eff0000</color>
     <color name="validUsername">#28089e00</color>
+    <color name="listItemBg">#dadada</color>
 </resources>
