--- a/app/src/main/res/layout/activity_user_messages.xml
+++ b/app/src/main/res/layout/activity_user_messages.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".UserMessages">
 
+    <ListView
+        android:id="@+id/lv_userMessages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
